<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:background="@color/colorBackground">

        <LinearLayout
            android:id="@+id/linearVertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/bottom_padding_textview"
                android:paddingTop="@dimen/top_padding_textview"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/subheading_text_size"
                tools:text="Produto" />

            <TextView
                android:id="@+id/text_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/bottom_padding_textview"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="@dimen/body_text_size"
                tools:text="Preço" />

            <EditText
                android:id="@+id/edit_observacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:inputType="textPersonName"
                android:paddingTop="@dimen/top_padding_textview"
                android:hint="@string/observacao" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_toEndOf="@id/linearVertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_diminuir"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/button_bg_round"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/button_diminuir"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/text_quantidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/bottom_padding_textview"
                android:paddingEnd="@dimen/bottom_padding_textview"
                android:paddingStart="@dimen/bottom_padding_textview"
                android:paddingTop="@dimen/top_padding_textview"
                android:text="@string/text_quantidade"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/subheading_text_size" />

            <Button
                android:id="@+id/button_aumentar"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/button_bg_round"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/button_adicionar"
                android:textColor="@android:color/white" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_remover"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/button_bg_round"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/button_remover"
                    android:textColor="@android:color/white" />
            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>